# cpppostbot

./: .travis.yml  CMakeLists.txt  README.md  bot_easy_api.cpp  bot_easy_api.h  bot_network.cpp  botkey.h  build.sh  const_str.h  json.hpp  main.cpp  termcolor.h  tgtypes.h  to_string.h  writefn_data.c  writefn_data.h
cfg/: admlistflushinterval  channelid  channelname  ownerid  postcommandname
